# autograd

./: .env.dev  .gitignore  Caddyfile  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/database/: mysql.py
app/parser/: extractor.py  main.py  photo.py  session.py  types.py  utils.py
app/s3/: main.py
app/sheduler/: crontab.py
src/: config.py
src/clients/: database.py  s3.py
src/ml/: main.py
src/ml/preprocess/: attrs.py  main.py  offers.py  photos.py  specs.py
src/ml/train/: embedding.py  main.py  outliers.py
src/parser/: main.py
src/parser/app/: main.py  photo.py  session.py  types.py  utils.py
src/parser/sheduler/: crontab.py
